// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetypeTips renders component 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Tools To Use
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Room for Growth and Change
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Settings For You
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="tools"
    >
      <option
        value="tools"
      >
        Tools To Use
      </option>
      <option
        value="room"
      >
        Room for Growth and Change
      </option>
      <option
        value="settings"
      >
        Settings For You
      </option>
    </select>
    <div
      className="content"
    >
      <div>
        TU - 0
      </div>
      <div>
        TU - 1
      </div>
      <div>
        TU - 2
      </div>
      <div>
        TU - 3
      </div>
      <div>
        TU - 4
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders component with available types 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Room for Growth and Change
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Settings For You
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="room"
    >
      <option
        value="room"
      >
        Room for Growth and Change
      </option>
      <option
        value="settings"
      >
        Settings For You
      </option>
    </select>
    <div
      className="content"
    >
      <div>
        CZ - 0
      </div>
      <div>
        CZ - 1
      </div>
      <div>
        CZ - 2
      </div>
      <div>
        CZ - 3
      </div>
      <div>
        CZ - 4
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders component with enabled types 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Room for Growth and Change
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Settings For You
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="room"
    >
      <option
        value="room"
      >
        Room for Growth and Change
      </option>
      <option
        value="settings"
      >
        Settings For You
      </option>
    </select>
    <div
      className="content"
    >
      <div>
        CZ - 0
      </div>
      <div>
        CZ - 1
      </div>
      <div>
        CZ - 2
      </div>
      <div>
        CZ - 3
      </div>
      <div>
        CZ - 4
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders component with headers 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="sectionHeading"
    >
      Personalty Tips
    </div>
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Tools To Use
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Room for Growth and Change
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Settings For You
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="tools"
    >
      <option
        value="tools"
      >
        Tools To Use
      </option>
      <option
        value="room"
      >
        Room for Growth and Change
      </option>
      <option
        value="settings"
      >
        Settings For You
      </option>
    </select>
    <div
      className="content"
    >
      <div>
        TU - 0
      </div>
      <div>
        TU - 1
      </div>
      <div>
        TU - 2
      </div>
      <div>
        TU - 3
      </div>
      <div>
        TU - 4
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders new type from clicking button 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Tools To Use
      </button>
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Room for Growth and Change
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Settings For You
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="room"
    >
      <option
        value="tools"
      >
        Tools To Use
      </option>
      <option
        value="room"
      >
        Room for Growth and Change
      </option>
      <option
        value="settings"
      >
        Settings For You
      </option>
    </select>
    <div
      className="content"
    >
      <div>
        CZ - 0
      </div>
      <div>
        CZ - 1
      </div>
      <div>
        CZ - 2
      </div>
      <div>
        CZ - 3
      </div>
      <div>
        CZ - 4
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders new type from selecting option 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Tools To Use
      </button>
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Room for Growth and Change
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Settings For You
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="room"
    >
      <option
        value="tools"
      >
        Tools To Use
      </option>
      <option
        value="room"
      >
        Room for Growth and Change
      </option>
      <option
        value="settings"
      >
        Settings For You
      </option>
    </select>
    <div
      className="content"
    >
      <div>
        CZ - 0
      </div>
      <div>
        CZ - 1
      </div>
      <div>
        CZ - 2
      </div>
      <div>
        CZ - 3
      </div>
      <div>
        CZ - 4
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders nothing if disabled 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
/>
`;

exports[`PersonalityArchetypeTips renders nothing if no archetype 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
/>
`;

exports[`PersonalityArchetypeTips renders nothing if no tips 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
/>
`;

exports[`PersonalityArchetypeTips renders nothing if results not ready 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
/>
`;

exports[`PersonalityArchetypeTips thirdPerson renders component 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Tools To Use
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Caution Zone
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="tools"
    >
      <option
        value="tools"
      >
        Tools To Use
      </option>
      <option
        value="caution_zone"
      >
        Caution Zone
      </option>
    </select>
    <div
      className="content"
    >
      <div>
        TP TU - 0
      </div>
      <div>
        TP TU - 1
      </div>
      <div>
        TP TU - 2
      </div>
      <div>
        TP TU - 3
      </div>
      <div>
        TP TU - 4
      </div>
    </div>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips thirdPerson renders firstPerson tips if no thirdPerson tips 1`] = `
<div
  className="traitify--container traitify--color-scheme-light"
>
  <div
    className="container"
  >
    <div
      className="tabs"
    >
      <button
        className="active"
        onClick={[Function]}
        type="button"
      >
        Tools To Use
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Room for Growth and Change
      </button>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Settings For You
      </button>
    </div>
    <select
      className="dropdown"
      onChange={[Function]}
      value="tools"
    >
      <option
        value="tools"
      >
        Tools To Use
      </option>
      <option
        value="room"
      >
        Room for Growth and Change
      </option>
      <option
        value="settings"
      >
        Settings For You
      </option>
    </select>
    <div
      className="content"
    >
      <div>
        TU - 0
      </div>
      <div>
        TU - 1
      </div>
      <div>
        TU - 2
      </div>
      <div>
        TU - 3
      </div>
      <div>
        TU - 4
      </div>
    </div>
  </div>
</div>
`;
